# Real-Time-Chat-Application

./: .gitignore  1724 Rust Proposal.md  README.md
real-time-chat-app-backend/: Cargo.toml  chatapp.db  chatapp.db 00-29-11-164.db
real-time-chat-app-backend/sql/: init.sql
real-time-chat-app-backend/src/: main.rs  presence.rs  websocket.rs
real-time-chat-app-frontend/: Cargo.toml  LICENSE-MIT  README.md  index.html  tailwind.config.js  tailwind.css
real-time-chat-app-frontend/src/: app.rs  main.rs  router.rs  store.rs
real-time-chat-app-frontend/src/api/: types.rs  user_api.rs
real-time-chat-app-frontend/src/components/: alert.rs  form_input.rs  header.rs
real-time-chat-app-frontend/src/pages/: chat_room_page.rs  homePage.rs  home_page.rs  mod.rs  profile_page.rs  signInPage.rs  signUpPage.rs  sign_in_page.rs  sign_up_page.rs  user_home_page.rs
real-time-chat-app-frontend/src/services/: websocket.rs
simple-frontend/: index.html
simple-frontend/css/: styles.css
simple-frontend/js/: app.js
