[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
gloo = "0.11.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
validator = { version = "0.19.0", features = ["derive"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["HtmlInputElement","Window"] }
reqwasm = "0.5.0"
yew = { version="0.21.0", features=["csr"] }
yew-router = "0.18.0"
yewdux = "0.10.0"
gloo-net = "0.2"
futures = "0.3"
log = "0.4"
console_log = "1.0"
wasm-logger = "0.2"
yew-hooks = "0.2" 
gloo-utils = "0.2"  
